--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  supercharged: ^2.1.1
+  flutter_screenutil: ^5.9.3
+  themed: ^8.1.0
 
 dev_dependencies:
   flutter_test:
