--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   supercharged: ^2.1.1
   flutter_screenutil: ^5.9.3
   themed: ^8.1.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
