--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   themed: ^8.1.0
   provider: ^6.1.5
+  flutter_linkify: ^6.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
