--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: termolio
-description: "A new Flutter project."
+description: "A terminal like portfolio made with flutter!"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.5
   flutter_linkify: ^6.0.0
   url_launcher: ^6.3.1
+  firebase_core: ^3.14.0
 
 dev_dependencies:
   flutter_test:
